--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Proyecto Uno</title>
 </head>
 <body>
+    <div class="cabecera">
+        <p>Cabecera</p>
+    </div>
     <div class="container">
         <h1>Este es el título del Proyecto Uno</h1>
         <p>Este es el parrafo de prueba número Uno para el Proyecto Uno, para el curso de Git y GitHub</p>    
