--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="cabecera">
-        <p>Cabecera</p>
+        <p><b>Cabecera</b></p>
     </div>
     <div class="container">
         <h1>Este es el título del Proyecto Uno</h1>
