Este commit se realiza en la rama main antes de hacer el merge con la rama cabecera

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <h1>Este es el título del Proyecto Uno</h1>
-        <p>Este es el parrafo de prueba número Uno para el Proyecto Uno, para el curso de Git y GitHub</p>    
+        <p>Este es el parrafo de prueba número Uno para el Proyecto Uno, para el curso de Git y GitHub</p> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis nemo quasi officia magni modi, obcaecati, culpa tempore architecto mollitia iste accusamus quod neque, asperiores assumenda corrupti tenetur nihil a.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi minus natus sit suscipit temporibus ad omnis. Voluptate corporis veritatis fuga aut nulla necessitatibus sapiente, harum dolore, iure quas, quisquam doloribus?</p>   
     </div>
 </body>
 </html>
